# My-Book-Hakathon

./: .draft_constitution.md  .gitignore  Dockerfile  README.md  docusaurus.config.js  package-lock.json  package.json  setup_production.py  sidebars.js
backend/: .env.example  README.md  initialize_content.py  pyproject.toml  requirements.txt
backend/routers/: auth.py  bonus_features.py  chat.py
backend/src/: auth.py  content_loader.py  main.py  models.py  performance_monitor.py  personalization.py  rate_limiter.py  services.py  session_manager.py  translation.py  validation.py
backend/tests/: test_api.py
blog/: 2025-01-01-welcome.md
docs/: intro.md
docs/advanced-projects/: project-examples.md
docs/conversational-robotics/: introduction.md
docs/gazebo/: introduction.md
docs/getting-started/: setup-and-installation.md
docs/kinematics/: introduction.md
docs/nvidia-isaac/: introduction.md
docs/physical-ai/: fundamentals.md
docs/ros2/: basics.md
docs/unity/: getting-started.md
docs/vla/: systems.md
history/prompts/physical-ai-textbook/: 1-physical-ai-textbook-implementation-planning.plan.prompt.md  2-physical-ai-textbook-tasks-generation.tasks.prompt.md
specs/: content_expansion_spec.md  css_troubleshooting_spec.md  development_workflow_spec.md  exercises_projects_spec.md  main_spec.md
specs/master/: data-model.md  plan.md  quickstart.md  research.md  tasks.md
specs/master/contracts/: rag-chatbot-api.yaml
src/components/: ChatbotComponent.jsx
src/theme/: LayoutWithChatbot.jsx
src/theme/DocPage/: index.js
